--- a/index.html
+++ b/index.html
@@ -6,10 +6,218 @@
     <title>E-School Resources</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>sajal</h1>
-    
+    <!-- Web-Header Section -->
+
+    <section class="web-header">
+    <div class="container nav-bar">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img src="icon/logo.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Others</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+                <li class="nav-item">
+                <button class="nav-button"> Sign in</button>
+              </li>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <br>
+      <br>
+
+      <!-- Web-Banner Section -->
+
+      <div class="container web-banner">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <p class="color-p">Are you ready to Learn?</p>
+                <h1>Learn With fun
+                   <br> 
+                   on <span class="color-h1">any schedule</span> </h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Varius blandit facilisis quam netus.</p>
+                <button class="get-started-btn">Get Started</button>
+            </div>
+            <div class="col-md-6">
+                <img src="image/illustration.png" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+    </section>
+
+    <!-- Courses Section -->
+
+    <section class="web-courses">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                        <div>
+                            <div class="web-courses-item">
+                                <img src="icon/book.png" alt="">
+                                <h4>1500+ Topic</h4>
+                                <p>Learn Anythings</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                    <div>
+                        <div class="web-courses-item">
+                            <img src="icon/student.png" alt="">
+                            <h4>1800+ Students</h4>
+                            <p>Learn Anythings</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                    <div>
+                        <div class="web-courses-item">
+                            <img src="icon/test.png" alt="">
+                            <h4>9K+ Test Token</h4>
+                            <p>Learn Anythings</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                    <div>
+                        <div class="web-courses-item">
+                            <img src="icon/students.png" alt="">
+                            <h4>2000+ Student</h4>
+                            <p>Learn Anythings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Online Courses Section -->
+
+    <section class="online-courses">
+        <h1> Online Courses </h1>
+        <div class="container">
+        <div class="card-deck">
+            <div class="card online-card">
+              <img src="image/morder pyschology.png" class="img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Modern Psychology</h5>
+                  <p class="card-text">Designation</p>
+                  <button class="card-button">Buy Course</a></button>
+                     <br><br><br>
+                <div class="more-info d-flex justify-content-between">
+                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
+                    <p><img src="icon/people.png" alt="">60 seats</p>
+              </div>
+            </div>
+         </div>
+            <div class="card online-card">
+              <img src="image/morder psyc.png" class="img-fluid" alt="...">
+                 <div class="card-body">
+                  <h5 class="card-title">Modern Psychology</h5>
+                  <p class="card-text">Designation</p>
+                  <button class="card-button">Buy Course</a></button>
+                <br><br><br>
+                <div class="more-info d-flex justify-content-between">
+                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
+                    <p><img src="icon/people.png" alt="">60 seats</p>
+                    </div>
+              </div>
+            </div>
+            <div class="card online-card">
+              <img src="image/morder pychons.png" class="img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Modern Psychology</h5>
+                <p class="card-text">Designation</p>
+                <button class="card-button">Buy Course</a></button>
+                <br><br><br>
+                <div class="more-info d-flex justify-content-between">
+                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
+                    <p><img src="icon/people.png" alt="">60 seats</p>
+                    </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
+    <!-- Testimonial Section-->
+
+    <section class="web-testimonial">
+        <h1> Testimonial </h1>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-3">
+                    <img src="image/man.png" class="img-fluid" alt="">
+                    </div>
+                <div class="col-md-9">
+                    <p></p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                </div>
+
+            </div>
+    </section>
+
+    <!-- Footer Section -->
+
+    <section class="footer-menu">
+        <div class="container">
+            <div class="row footer-section">
+                <div class="col-md-4">
+                    <p>Millions of people of all ages and from around
+                        the world are improving their lives with us</p>
+                        <input type="subscribe">
+                        <button class="nav-button"> Subscribe </button>
+                </div>
+                <div class="col-md-3">
+                    <h5>Course</h5>
+                    <ul class="footer-list">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Terms</h5>
+                    <ul class="footer-list">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h5>Useful Link</h5>
+                    <ul class="footer-list">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <small>Copyright © 2020 E-School. All Rights Reserved.</small> 
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
