--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h1> Online Courses </h1>
         <div class="container">
         <div class="card-deck">
-            <div class="card online-card">
+            <div class="card online-card align-items-center">
               <img src="image/morder pyschology.png" class="img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Modern Psychology</h5>
@@ -125,7 +125,7 @@
               </div>
             </div>
          </div>
-            <div class="card online-card">
+            <div class="card online-card align-items-center">
               <img src="image/morder psyc.png" class="img-fluid" alt="...">
                  <div class="card-body">
                   <h5 class="card-title">Modern Psychology</h5>
@@ -138,7 +138,7 @@
                     </div>
               </div>
             </div>
-            <div class="card online-card">
+            <div class="card online-card align-items-center">
               <img src="image/morder pychons.png" class="img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern Psychology</h5>
