--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School Resources</title>
+    <link rel="shortcut icon" href="icon/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -159,7 +160,7 @@
     <section class="web-testimonial">
         <h1> Testimonial </h1>
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row no-gutters">
                 <div class="col-md-3">
                     <img src="image/man.png" class="img-fluid" alt="">
                     </div>
