--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School Resources</title>
-    <link rel="shortcut icon" href="icon/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Others</a>
+              <a class="nav-link" href="#">Online Courses</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="#">Testimonial</a>
                 <li class="nav-item">
                 <button class="nav-button"> Sign in</button>
               </li>
@@ -67,7 +67,7 @@
     <section class="web-courses">
         <div class="container">
             <div class="row d-flex justify-content-center">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                         <div>
                             <div class="web-courses-item">
                                 <img src="icon/book.png" alt="">
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div>
                         <div class="web-courses-item">
                             <img src="icon/student.png" alt="">
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div>
                         <div class="web-courses-item">
                             <img src="icon/test.png" alt="">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 align-items-center">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                     <div>
                         <div class="web-courses-item">
                             <img src="icon/students.png" alt="">
@@ -113,7 +113,7 @@
         <h1> Online Courses </h1>
         <div class="container">
         <div class="card-deck">
-            <div class="card online-card align-items-center">
+            <div class="card online-courses">
               <img src="image/morder pyschology.png" class="img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Modern Psychology</h5>
@@ -121,12 +121,12 @@
                   <button class="card-button">Buy Course</a></button>
                      <br><br><br>
                 <div class="more-info d-flex justify-content-between">
-                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
-                    <p><img src="icon/people.png" alt="">60 seats</p>
+                    <p><img src="icon/calendar.png" alt=""><span class="span-card">Start 20 April, 2021</span></p>
+                    <p><img src="icon/people.png" alt=""><span class="span-card">60 seats</span></p>
               </div>
             </div>
          </div>
-            <div class="card online-card align-items-center">
+            <div class="card online-courses">
               <img src="image/morder psyc.png" class="img-fluid" alt="...">
                  <div class="card-body">
                   <h5 class="card-title">Modern Psychology</h5>
@@ -134,12 +134,12 @@
                   <button class="card-button">Buy Course</a></button>
                 <br><br><br>
                 <div class="more-info d-flex justify-content-between">
-                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
-                    <p><img src="icon/people.png" alt="">60 seats</p>
+                    <p><img src="icon/calendar.png" alt=""><span class="span-card">Start 20 April, 2021</span></p>
+                    <p><img src="icon/people.png" alt=""><span class="span-card">60 seats</span></p>
                     </div>
               </div>
             </div>
-            <div class="card online-card align-items-center">
+            <div class="card online-courses">
               <img src="image/morder pychons.png" class="img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern Psychology</h5>
@@ -147,8 +147,8 @@
                 <button class="card-button">Buy Course</a></button>
                 <br><br><br>
                 <div class="more-info d-flex justify-content-between">
-                    <p><img src="icon/calendar.png" alt="">Start 20 April, 2021</p>
-                    <p><img src="icon/people.png" alt="">60 seats</p>
+                    <p><img src="icon/calendar.png" alt=""><span class="span-card">Start 20 April, 2021</span></p>
+                    <p><img src="icon/people.png" alt=""><span class="span-card">60 seats</span></p>
                     </div>
               </div>
             </div>
@@ -160,12 +160,12 @@
     <section class="web-testimonial">
         <h1> Testimonial </h1>
         <div class="container">
-            <div class="row no-gutters">
-                <div class="col-md-3">
-                    <img src="image/man.png" class="img-fluid" alt="">
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <img src="image/man.png" class="" alt="">
                     </div>
-                <div class="col-md-9">
-                    <p></p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                <div class="col-sm-12 col-md-9">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                 </div>
 
             </div>
